# scan_n_plan_workshop

./: .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  aws_setup.bash  dependencies.repos  dependencies.rosinstall  dependencies_foxy.repos  dependencies_rolling.repos  dependencies_tesseract.repos  tesseract-dependencies.rosinstall  workshop_setup.bash
bridge_ws/src/ros1_action_bridge/: CMakeLists.txt  README.md  package.xml
deps_ws/: .gitignore
deps_ws/src/fcl/: CMakeLists.txt  colcon.pkg  package.xml
ros1_ws/src/snp_bringup_ros1/: CMakeLists.txt  package.xml
ros1_ws/src/snp_motion_planning/: CMakeLists.txt  package.xml
ros2_ws/src/roscon_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/snp_applicaton/: CMakeLists.txt  package.xml
ros2_ws/src/snp_motion_execution/: package.xml  setup.py
ros2_ws/src/snp_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/snp_tpp/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/tesseract_msgs/: CMakeLists.txt  package.xml
snp_application/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
snp_application/config/: snp.btproj  snp.xml
snp_application/include/: rosconwindow.h  serialize.h  snp_widget.h  std_msgs_yaml.h  trajectory_msgs_yaml.h
snp_application/include/bt/: bt_thread.h  button_approval_node.h  button_monitor_node.h  progress_decorator_node.h  set_page_decorator_node.h  snp_bt_ros_nodes.h  snp_bt_service_node.h  snp_sequence_with_memory_node.h  utils.h
snp_application/include/snp_application/: snp_behavior_tree.h  snp_widget.h  std_msgs_yaml.h  trajectory_msgs_yaml.h
snp_application/src/: main.cpp  rosconwindow.cpp  rosconwindow.ui  snp_behavior_tree.cpp  snp_panel.cpp  snp_widget.cpp  snp_widget.ui
snp_application/src/bt/: bt_thread.cpp  button_approval_node.cpp  button_monitor_node.cpp  create_joint_state_message.cpp  extract_approach_process_departure_trajectories_node.cpp  load_trajectory_from_file_node.cpp  monitor_sequence_node.cpp  plugins.cpp  progress_decorator_node.cpp  sequence_with_memory_node.cpp  set_page_decorator_node.cpp  snp_bt_ros_nodes.cpp  snp_bt_service_node.cpp  snp_sequence_with_memory_node.cpp  text_edit_logger.cpp
snp_application/test/: CMakeLists.txt  test_bt.cpp
snp_bringup_ros2/: CMakeLists.txt  package.xml
snp_bringup_ros2/config/: app.rviz
snp_bringup_ros2/launch/: start.launch.xml
snp_fanuc_workcell/: CMakeLists.txt  README.md  dependencies_hardware.repos  dependencies_ros1.repos  package.xml
snp_fanuc_workcell/config/: camera_calibration.yaml  rviz_base_config.rviz  scan_traj.yaml  workcell.srdf
snp_fanuc_workcell/launch/: start.launch.xml  test.launch.xml
snp_fanuc_workcell/meshes/: results_mesh.ply
snp_fanuc_workcell/meshes/collision/: camera.ply  ee_camera_mount.ply  ee_motor_mount.ply  ee_plate.ply  end_effector_convhull.ply
snp_fanuc_workcell/meshes/visual/: end_effector_viz.ply
snp_fanuc_workcell/urdf/: workcell.xacro
snp_motion_execution/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg
snp_motion_execution/launch/: ros2_control.launch.py
snp_motion_execution/scripts/: execution_simulator  execution_simulator_node.py  motion_execution_node.py  motion_execution_server  robot_enable_simulator  robot_enable_simulator_node.py  scan_trajectory_motion_plan_server_node
snp_motion_execution/src/: exec_sim_node.cpp  execution_simulator_node.cpp  motion_ex_node.cpp  motion_execution_node.cpp
snp_motion_planning/: CHANGELOG.rst  CMakeLists.txt  package.xml
snp_motion_planning/config/: task_composer_plugins.yaml
snp_motion_planning/launch/: planning_server.launch.py  planning_server.launch.xml
snp_motion_planning/src/: cartesian_time_parameterization.hpp  cartesian_time_parameterization_profile.hpp  cartesian_time_parameterization_task_generator.hpp  constant_tcp_speed_time_parameterization.hpp  constant_tcp_speed_time_parameterization_profile.hpp  constant_tcp_speed_time_parameterization_task.hpp  constant_tcp_speed_time_parameterization_task_generator.hpp  kinematic_limits_check_profile.hpp  kinematic_limits_check_task_generator.hpp  motoman_hc10_ikfast_plugin.cpp  planner_profiles.hpp  planning_server.cpp  taskflow_generators.hpp
snp_motion_planning/src/raster_task/: snp_raster_global_motion_task.cpp  (+3 more)
snp_scanning/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
snp_scanning/scripts/: reconstruction_sim_node  reconstruction_sim_node.py  scan_motion_plan_from_file_node  scan_trajectory_motion_plan_server_node
snp_scanning/src/: open3d_sim_node.cpp  scan_trajectory_node.cpp
snp_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
snp_simulation/scripts/: reconstruction_sim_node
snp_support/: CMakeLists.txt  package.xml  setup.cfg  setup.py
snp_support/cmake/: snp_support-config.cmake.in
snp_support/config/: camera_calibration.yaml  rviz_base_config.rviz  scan_traj.yaml  workcell.srdf  workcell_plugins.yaml
snp_support/launch/: demo.launch.py  test.launch.py  test.launch.xml
snp_support/meshes/: part_scan.ply  rosWorldCalib.dae
snp_support/rviz/: demo.rviz
snp_support/urdf/: common_materials.xacro  hc10.xacro  hc10_macro.xacro  mh180_120.xacro  mh180_120_macro.xacro  workcell.xacro
snp_tpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
snp_tpp/hooks/: noether_plugin_libs.dsv.in
snp_tpp/src/: drawn_toolpath_planner.cpp  drawn_toolpath_planner_widget.cpp  plugins.cpp  roi_selection_mesh_modifier.cpp  roi_selection_mesh_modifier.h  roi_selection_mesh_modifier_widget.cpp  roi_selection_mesh_modifier_widget.h  roi_selection_mesh_modifier_widget.ui  snp_raster_planner_widget.cpp  snp_tpp_node.cpp  snp_tpp_test_node.cpp  tpp_app.cpp  tpp_widget.cpp  tpp_widget.h  widget_plugins.cpp
snp_tpp/test/: CMakeLists.txt  test_compile.cpp
snp_tpp/ui/: drawn_toolpath_planner_widget.ui  snp_raster_planner_widget.ui  tpp_widget.ui
tesseract_msgs/: CMakeLists.txt
tesseract_msgs/msg/: ContactResult.msg  JointState.msg
tesseract_rosutils/: CMakeLists.txt
tesseract_rosutils/src/: conversions.cpp  plotting.cpp  utils.cpp
tesseract_rosutils/test/: tesseract_rosutils_unit.cpp
(+185 files in other folders)
