<?xml version="1.0"?>
<package format="3">
  <name>snp_fanuc_workcell</name>
  <version>0.0.0</version>
  <description>Scan and plan support package</description>
  <maintainer email="reid.christopher@swri.org">rchristopher</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
