<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snp_scanning</name>
  <version>0.1.0</version>
  <description>SNP scanning package</description>
  <maintainer email="tyler.marr@swri.org">Tyler Marr</maintainer>
  <license>BSD</license>

  <exec_depend>industrial_reconstruction_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-open3d-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
