<?xml version="1.0"?>
<package format="3">
  <name>snp_support</name>
  <version>0.0.0</version>
  <description>Scan and plan support package</description>
  <maintainer email="reid.christopher@swri.org">rchristopher</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
